--- a/forgive.html
+++ b/forgive.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>An Apology from Yakout to Jalil</title>
+  <title>An Apology </title>
   <style>
     body {
       font-family: 'Arial', sans-serif;
@@ -74,15 +74,10 @@
 <body>
   <h1 > Hi Jalil </h1>
   <p>
-    I’ve been debugging my heart,<br>
-    and I found a critical error:<br>
-    <strong>I hurt you.</strong> I’m so sorry. 💔
+   hi
+    I’m so sorry. 💔
   </p>
-  <p>
-    I know I messed up, and I’m really sorry. You mean the world to me, and I hate that I hurt you.
-
-I promise to do better and make it up to you. ❤️
-  </p>
+ 
   <div class="heart">❤️</div>
   <div class="buttons">
     <p>Will you forgive me?</p>
